' @autogenerated
@startuml
left to right direction
title Clases para user accepted termns of use
class master.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
}
class master.TenantTermsOfUse{
uid:string
text:blob
enabled:boolean
attached:binary
activationDate:datetime
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class master.UserAcceptedTermnsOfUse{
uid:string
acceptDate:datetime
version:integer
list()
retrieve()
create()
update()
delete()
}
master.User "1"  o--  "N*" master.UserAcceptedTermnsOfUse: user
master.TenantTermsOfUse "1"  o--  "N*" master.UserAcceptedTermnsOfUse: conditions

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
